doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/rainaru/Documents/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/greenfoot.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/bluejext2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/bluej.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/classgraph-4.8.90.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.8.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/Users/rainaru/Documents/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/rainaru/Documents/GitHub/hungry-animal-rainaru2
-d
/Users/rainaru/Documents/GitHub/hungry-animal-rainaru2/doc
-encoding
UTF-8
-charset
UTF-8
/Users/rainaru/Documents/GitHub/hungry-animal-rainaru2/Seal.java
<---- end of javadoc command ---->
Loading source file /Users/rainaru/Documents/GitHub/hungry-animal-rainaru2/Seal.java...
/Users/rainaru/Documents/GitHub/hungry-animal-rainaru2/Seal.java:18: error: ';' expected
    SimpleTimer animationTimer = newTimer
                                         ^
1 error
